setup infrastructure README

--- a/1-k8s_infrastructure/README
+++ b/1-k8s_infrastructure/README
@@ -9,3 +9,10 @@ mv ./kind /usr/local/bin
 curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
 chmod 700 get_helm.sh
 ./get_helm.sh
+
+helm repo add stable https://kubernetes-charts.storage.googleapis.com
+
+
+****INSTALL SPLK OPERATOR****
+
+kubectl apply -f http://tiny.cc/splunk-operator-install
