--- a/3-sck/README
+++ b/3-sck/README
@@ -15,11 +15,7 @@ https://github.com/splunk/splunk-connect-for-kubernetes
 
 
 ****INSTALL SCK 1.4.1*****
-	Creat Namespace for SCK
-		kubectl create ns sck
-
-	Review sck.yaml for additional parameters (like Splunk HEC endpoint)
 	Install SCK chart	
-		helm install sck -n sck -f sck.yaml splunk-connect-for-kubernetes-1.4.1.tgz 
+		helm install sck  -f sck.yaml splunk-connect-for-kubernetes-1.4.1.tgz 
 	Verify
-		kubectl get po -n sck 
+		kubectl get po 
