--- a/5-sfx/README
+++ b/5-sfx/README
@@ -13,7 +13,7 @@ helm repo update
 
 
 helm install \
---set signalFxAccessToken=xxxxx \
+--set signalFxAccessToken= xxxx \ 
 --set clusterName=test_cluster \
 --set kubeletAPI.url=https://127.0.0.1:10250  \
 --set signalFxRealm=us1  \
@@ -21,6 +21,6 @@ helm install \
 --set traceEndpointUrl=https://ingest.us1.signalfx.com/v2/trace \
 --set gatherDockerMetrics=false \
 signalfx-agent signalfx/signalfx-agent \
--f workshop/k3s/values.yaml
+-f values.yaml 
 
 
