--- a/4-sfx/README
+++ b/4-sfx/README
@@ -13,13 +13,14 @@ helm repo update
 
 
 helm install \
---set signalFxAccessToken= xxxx \ 
---set clusterName=test_cluster \
+--set signalFxAccessToken=SBmpkOm8Vquqspus58TrnQ \
+--set clusterName=test_cluster_JMR \
 --set kubeletAPI.url=https://127.0.0.1:10250  \
---set signalFxRealm=us1  \
+--set signalFxRealm=us0  \
 --set agentVersion=5.1.1 \
---set traceEndpointUrl=https://ingest.us1.signalfx.com/v2/trace \
---set gatherDockerMetrics=false \
+--set traceEndpointUrl=https://ingest.us0.signalfx.com/v2/trace \
+--set gatherDockerMetrics=true \
+--set environment=JMR \
 signalfx-agent signalfx/signalfx-agent \
 -f values.yaml 
 
